# battery-flow-control

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: config.hpp.1FB51FC210785F4A.idx  csv_logger.cpp.4B2311395885300E.idx  csv_logger.hpp.A98A42172062D432.idx  gradient_descent.cpp.266A319254691B1C.idx  gradient_descent.hpp.583D7A5CF6CDC4D5.idx  loader.cpp.8145E16B12D7C8D3.idx  main.cpp.5E2DB0C6D33F47D6.idx  mpc_controller.cpp.CD4BD5D587B14547.idx  mpc_controller.hpp.2FF2B3D5BF31DEAD.idx  pid_controller.cpp.CCF59D9FA587D490.idx  pid_controller.hpp.2DB9FE8450C92286.idx  scenario.cpp.0C79DB8BB0FA024B.idx  scenario.hpp.532AA05461B0E819.idx  sensor_model.hpp.3C372F0C9818D62D.idx  simulator.hpp.E28161B6E56FB798.idx  simulator.ipp.850D914A7A149F87.idx  test_config_validation.cpp.11B63CAB888227EE.idx  test_core_types.cpp.B5013A54FD3BCF6B.idx  test_integration.cpp.FFAD2D389FD18425.idx  test_mpc_solver.cpp.D91FF5764023AE67.idx  test_pid_controller.cpp.4BEA55372CDE7B43.idx  test_sensor_model.cpp.0574255CD32565FC.idx  test_thermal_model.cpp.D5204487B5A7712F.idx  thermal_model.cpp.05C14ECBB4C6DDFD.idx  thermal_model.hpp.F9BB9F1A8AD8CA91.idx  thermal_state.cpp.9140FE4CB6375DC6.idx  thermal_state.hpp.55C5ADDDC9DB4FC3.idx  types.hpp.03042478F55D9E4F.idx
.github/workflows/: ci.yml
config/: default.yaml  scenario_rising_ambient.yaml  scenario_step_transient.yaml
docs/: ARCHITECTURE.md  DESIGN.md
include/btm/config/: config.hpp
include/btm/control/: controller_concept.hpp  mpc_controller.hpp  pid_controller.hpp
include/btm/core/: constants.hpp  types.hpp
include/btm/model/: thermal_model.hpp  thermal_state.hpp
include/btm/scenario/: scenario.hpp
include/btm/sim/: csv_logger.hpp  sensor_model.hpp  simulator.hpp  simulator.ipp
include/btm/solver/: gradient_descent.hpp
scripts/: check_regression.py  compare_controllers.py  generate_report.py  horizon_analysis.py  make_readme_plots.py  plot_results.py
src/: main.cpp
src/config/: loader.cpp
src/control/: mpc_controller.cpp  pid_controller.cpp
src/model/: thermal_model.cpp  thermal_state.cpp
src/scenario/: scenario.cpp
src/sim/: csv_logger.cpp
src/solver/: gradient_descent.cpp
test/: test_config_validation.cpp  test_core_types.cpp  test_integration.cpp  test_mpc_solver.cpp  test_pid_controller.cpp  test_sensor_model.cpp  test_thermal_model.cpp
